--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
-    "tailwindcss": "^4.1.3",
-    "vite-plugin-mdx": "^3.6.1"
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
