--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,10 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react-jsx",       // 或 "react-jsxdev"
+    "jsxImportSource": "react", // 指定运行时库路径
+    "types": ["react"]
+  }
 }
