--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite-react-static build --mode ssg --base /",
+    "build": "vite-react-static build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -14,7 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
-    "vite-react-static": "^0.0.2-beta.1"
+    "vite-react-static": "^0.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
