--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0",
-    "vite-react-static": "^0.0.2"
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -29,6 +28,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "unocss": "^66.1.0-beta.11",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-react-static": "^0.1.0" 
   }
 }
