--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "motion": "^12.15.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,6 +30,6 @@
     "typescript-eslint": "^8.24.1",
     "unocss": "^66.1.0-beta.11",
     "vite": "^6.2.0",
-    "vite-react-static": "^0.1.0" 
+    "vite-react-static": "^0.1.0"
   }
 }
