--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ml5": "^1.3.1",
     "motion": "^12.15.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "patch-package": "^8.0.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "unocss": "^66.1.0-beta.11",
