--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mermaid": "^10.4.0",
     "ml5": "^1.3.1",
     "motion": "^12.15.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
-    "mermaid": "^10.4.0"
+    "shiki": "^3.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@mdx-js/react": "^2.3.0",
     "@mdx-js/rollup": "^3.1.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
