--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "typescript-eslint": "^8.24.1",
     "unocss": "^66.1.0-beta.11",
     "vite": "^6.2.0",
-    "vite-react-static": "0.1.2"
+    "vite-react-static": "0.1.2",
+    "remark-math": "^6.0.0",
+    "rehype-katex": "^6.0.2",
+    "katex": "^0.16.8"
   }
 }
